--- a/src/index.scss
+++ b/src/index.scss
@@ -8,15 +8,9 @@
 }
 
 body {
-  font-family: sans-serif;
   min-height: 100vh;
   background-color: white;
 }
-
-// .layout {
-//   min-height: 100vh;
-//   background-color: white;
-// }
 
 .visually-hidden {
   background-color: #fff;
@@ -29,6 +23,20 @@ body {
   clip: rect(1px, 1px, 1px, 1px);
 }
 
+button,
+a.button {
+  outline: none;
+  border-radius: 10px;
+  padding: 8px;
+  min-width: 60px;
+  font-size: 18px;
+  cursor: pointer;
+  background: transparent;
+  font-weight: bolder;
+  border: none;
+  text-decoration: none;
+}
+
 a {
   text-decoration: none;
 }
@@ -39,4 +47,29 @@ a {
   align-items: center;
   margin: 0 auto;
   margin: 0 5%;
+}
+
+h1 {
+  font-size: 28px;
+}
+h2 {
+  font-size: 24px;
+}
+h3 {
+  font-size: 20px;
+}
+
+h4 {
+  font-size: 18px;
+}
+
+h5 {
+  font-size: 16px;
+}
+h6 {
+  font-size: 14px;
+}
+
+* {
+  line-height: 1.3;
 }
