--- a/src/components/Event-Board/EventBoard.scss
+++ b/src/components/Event-Board/EventBoard.scss
@@ -48,6 +48,8 @@
     // background: rgb(121, 133, 95, 0.3);
     background-color: #fff;
     min-height: 100px;
+    /* offset-x | offset-y | blur-radius | spread-radius | color */
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   }
 
   .swim-title {
@@ -66,6 +68,8 @@
     word-wrap: break-word;
     background-color: rgb(242, 243, 239);
     // background-color: rgba(121, 133, 95, 0.1);
+    /* offset-x | offset-y | blur-radius | spread-radius | color */
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   }
 
   .item__container {
@@ -85,6 +89,7 @@
   .current {
     background-color: #fff;
     color: #fff;
+    box-shadow: none;
 
     .item__container {
       border: none;
