--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,7 +1,7 @@
 // Dashboard
 
 // Dashboard Items
-li.DashbordItem {
+li.DashboardItem {
   list-style: none;
   border: 1px solid rgb(121, 133, 95);
   border-radius: 10px;
@@ -22,6 +22,7 @@ li.DashbordItem {
     flex-grow: 1;
     border-bottom: 1px solid rgb(121, 133, 95);
     padding-bottom: 4px;
+    color: black;
   }
   i {
     color: black;
