--- a/src/components/Event-Board/EventBoard.scss
+++ b/src/components/Event-Board/EventBoard.scss
@@ -96,16 +96,18 @@
     }
   }
 
-  .add-item-container {
+  .add-btn-container {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    button {
+    text-align: center;
+    .add-btn {
       svg {
-        color: rgb(121, 133, 95);
-        // color: rgb(0, 0, 0);
+        // color: rgb(121, 133, 95);
+        color: rgb(0, 0, 0);
       }
     }
+  }
+
+  .add-item-container {
+    border: 1px solid red;
   }
 }
