--- a/src/components/Event-Board/EventBoard.scss
+++ b/src/components/Event-Board/EventBoard.scss
@@ -39,7 +39,7 @@
     align-items: flex-start;
   }
 
-  .swimlane {
+  .column {
     min-width: 250px;
     border: 1px solid rgb(121, 133, 95);
     border-radius: 4px;
@@ -52,7 +52,7 @@
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   }
 
-  .swim-title {
+  .column-title {
     background-color: rgb(121, 133, 95);
     text-align: center;
     color: whitesmoke;
