--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
 body {
   min-height: 100vh;
   background-color: white;
+  font-family: sans-serif;
 }
 
 .visually-hidden {
@@ -75,12 +76,32 @@ h6 {
 }
 
 .modal-container {
+  width: 100%;
+  min-height: 100vh;
   z-index: 10;
   position: absolute;
-  top: 200px;
+  top: 0px;
+  background-color: rgba(158, 158, 158, 0.7);
 
   .modal {
-    margin: 0 auto;
-    background-color: cornsilk;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width: 80%;
+    margin: 0 10%;
+    padding: 5px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 8px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+
+    button {
+      width: 100%;
+    }
+    .close-btn {
+      text-align: right;
+      padding-right: 20px;
+    }
   }
 }
