New event modal styling

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,15 +5,7 @@ header {
 }
 
 .header {
-  padding: 20px;
-}
-
-.wrapper {
-  max-width: 1200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
+  padding: 20px 0;
 }
 
 a,
