--- a/src/index.scss
+++ b/src/index.scss
@@ -43,10 +43,10 @@ a {
 }
 
 .wrapper {
-  max-width: 1200px;
+  // max-width: 1200px;
   display: flex;
   align-items: center;
-  margin: 0 auto;
+  // margin: 0 auto;
   margin: 0 5%;
 }
 
