--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,15 +1,35 @@
 // Dashboard
 
 .Dashboard {
-  .new-event-btn {
-    background-color: cornflowerblue;
+  width: 100%;
+
+  .add-event-btn-container {
+    width: 100%;
+    margin: 10px;
+
     display: inline-block;
-    color: #fff;
-    padding: 5px;
-    margin-bottom: 10px;
+    text-align: right;
+
+    button.new-event-btn {
+      background-color: cornflowerblue;
+      color: #fff;
+      display: inline-block;
+      margin-right: 40px;
+    }
   }
+
+  h1 {
+    margin: 20px 0 10px 0;
+  }
+
+  .DashboardItems__container {
+    display: flex;
+  }
+
   ul {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
   }
 }
 // Dashboard Items
@@ -17,13 +37,20 @@ li.DashbordItem {
   list-style: none;
   border: 1px solid rgb(121, 133, 95);
   border-radius: 10px;
-  max-width: 300px;
-  a {
-    background-color: cornflowerblue;
-    color: #fff;
-    padding: 10px;
-    display: inline-block;
-    margin-bottom: 10px;
+  margin: 10px 0;
+
+  .btn-container {
+    width: 130px;
+    display: flex;
+    align-items: flex-end;
+
+    a {
+      background-color: cornflowerblue;
+      color: #fff;
+      display: inline-block;
+      margin-bottom: 10px;
+      width: auto;
+    }
   }
 }
 
@@ -50,9 +77,8 @@ li.DashbordItem {
   }
 }
 .DashboardItems__info {
-  // background-color: bisque;
-  border-bottom: 1px solid rgb(121, 133, 95);
   padding: 10px 0;
+  max-width: 300px;
 
   .info-section {
     display: flex;
@@ -69,14 +95,14 @@ li.DashbordItem {
 }
 
 .DashboardItems__progress {
-  width: 100%;
+  flex-grow: 1;
 
   svg {
     margin: 0 auto;
     width: 100%;
 
     g {
-      transform: translate(34px, -25px);
+      transform: translate(0px, -25px);
     }
   }
 }
