--- a/src/components/Event-Board/EventBoard.scss
+++ b/src/components/Event-Board/EventBoard.scss
@@ -15,21 +15,26 @@
   /* Track */
   ::-webkit-scrollbar-track {
     background: rgba(121, 133, 95, 0.1);
+    background: rgba(130, 156, 167, 0.1);
     background-color: none;
     border: 1px solid rgb(121, 133, 95);
+    border: 1px solid rgb(150, 150, 150);
     border-radius: 4px;
   }
 
   /* Handle */
   ::-webkit-scrollbar-thumb {
     background: rgba(121, 133, 95, 0.5);
+    background: rgb(130, 156, 167);
     border: 1px solid rgb(121, 133, 95);
+    border: 1px solid rgb(150, 150, 150);
     border-radius: 4px;
   }
 
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: rgb(121, 133, 95);
+    background: rgb(130, 156, 167);
   }
 
   .drag-n-drop {
@@ -42,10 +47,10 @@
   .column {
     min-width: 250px;
     border: 1px solid rgb(121, 133, 95);
+    border: 1px solid rgb(150, 150, 150);
     border-radius: 4px;
     margin: 0 2px;
     margin-bottom: 10px;
-    // background: rgb(121, 133, 95, 0.3);
     background-color: #fff;
     min-height: 100px;
     /* offset-x | offset-y | blur-radius | spread-radius | color */
@@ -54,11 +59,27 @@
 
   .column-title {
     background-color: rgb(121, 133, 95);
+    background-color: rgb(130, 156, 167);
     text-align: center;
     color: whitesmoke;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: bolder;
     text-transform: capitalize;
+
+    display: flex;
+    justify-content: flex-end;
+
+    .title {
+      text-align: center;
+      flex-grow: 1;
+      padding-bottom: 4px;
+      padding-left: 28px;
+    }
+    .options-btn {
+      text-align: right;
+      padding-right: 8px;
+      cursor: pointer;
+    }
   }
 
   .item {
@@ -66,7 +87,7 @@
     height: auto;
     overflow-wrap: break-word;
     word-wrap: break-word;
-    background-color: rgb(242, 243, 239);
+    background-color: rgb(255, 255, 255);
     // background-color: rgba(121, 133, 95, 0.1);
     /* offset-x | offset-y | blur-radius | spread-radius | color */
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
@@ -75,8 +96,20 @@
   .item__container {
     white-space: pre-line;
     padding: 5px;
-    border: 1px solid rgb(121, 133, 95);
+    border: 1px solid rgb(150, 150, 150);
     border-radius: 4px;
+  }
+
+  .item-title-container {
+    display: flex;
+    justify-content: space-between;
+
+    i {
+      color: rgb(68, 68, 68);
+      text-align: right;
+      padding-left: 8px;
+      cursor: pointer;
+    }
   }
 
   .item__title {
@@ -84,6 +117,9 @@
     width: 100%;
     font-weight: bold;
     text-transform: capitalize;
+
+    flex-grow: 1;
+    padding-bottom: 4px;
   }
 
   .current {
@@ -100,14 +136,14 @@
     width: 100%;
     text-align: center;
     .add-btn {
+      cursor: pointer;
       svg {
-        // color: rgb(121, 133, 95);
         color: rgb(0, 0, 0);
       }
     }
   }
 
-  .add-item-container {
-    border: 1px solid red;
+  .delete-btn {
+    background-color: red;
   }
 }
