--- a/src/components/Login-Signup/Forms.scss
+++ b/src/components/Login-Signup/Forms.scss
@@ -1,7 +1,8 @@
 .signup-container,
 .login-container,
 .add-item-container,
-.new-event-container {
+.new-event-container,
+.modify-task-container {
   flex-wrap: wrap;
   width: 80%;
 
@@ -59,6 +60,10 @@
   button {
     background: rgb(121, 133, 95);
     color: rgb(255, 255, 255);
+  }
+
+  button.delete-btn {
+    background-color: red;
   }
 
   #error-msg {
