Update to Order function to allows columns with no tasks

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,7 @@
 header {
   width: 100%;
   background: rgb(121, 133, 95);
+  background: rgb(130, 156, 167);
   font-family: "Merriweather", serif;
 }
 
