--- a/src/components/Event-Board/EventBoard.scss
+++ b/src/components/Event-Board/EventBoard.scss
@@ -1,171 +1,242 @@
-.board-container {
-  max-width: 1400px;
-  margin: 20px 5%;
+.eventboard-background {
+  // background-image: url("./../../assets/wave.jpg");
+  // background-repeat: no-repeat;
+  // background-position: center;
+  width: 100%;
+  min-height: 100vh;
+  // background-color: rgba(235, 235, 235, 0.3);
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
+  // background-size: cover;
+  // background-image: url("./../../assets/gradienta-7brhZmwXn08-unsplash.jpg");
+}
 
-  .scrollbar {
-    overflow: auto;
-    white-space: nowrap;
+.EventBoard {
+  height: 100%;
+  padding-bottom: 60px;
+
+  .wrapper {
+    flex-wrap: wrap;
   }
 
-  /* width */
-  ::-webkit-scrollbar {
-    width: 5px;
-  }
-
-  /* Track */
-  ::-webkit-scrollbar-track {
-    // background: rgba(121, 133, 95, 0.1);
-    background: rgba(130, 156, 167, 0.1);
-    background-color: none;
-    // border: 1px solid rgb(121, 133, 95);
-    border: 1px solid rgb(150, 150, 150);
-    border-radius: 4px;
-  }
-
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    // background: rgba(121, 133, 95, 0.5);
-    background: rgb(130, 156, 167);
-    // border: 1px solid rgb(121, 133, 95);
-    border: 1px solid rgb(150, 150, 150);
-    border-radius: 4px;
-  }
-
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    // background: rgb(121, 133, 95);
-    background: rgb(130, 156, 167);
-  }
-
-  .drag-n-drop {
-    display: flex;
+  .header-banner {
     width: 100%;
-    height: 100%;
-    align-items: flex-start;
-  }
-
-  .column {
-    min-width: 250px;
-    // border: 1px solid rgb(121, 133, 95);
-    border: 1px solid rgb(150, 150, 150);
-    border-radius: 4px;
-    margin: 0 5px;
-    margin-bottom: 10px;
-    background-color: #fff;
-    min-height: 100px;
-    /* offset-x | offset-y | blur-radius | spread-radius | color */
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  }
-
-  .column-title {
-    // background-color: rgb(121, 133, 95);
-    // background-color: rgb(177, 182, 184);
-    background-color: rgb(130, 156, 167);
-    text-align: center;
-    color: whitesmoke;
-    font-size: 20px;
-    font-weight: bolder;
-    text-transform: capitalize;
-
-    display: flex;
-    justify-content: flex-end;
-
-    .title {
-      text-align: center;
-      flex-grow: 1;
-      padding-bottom: 4px;
-      padding-left: 28px;
-    }
-    .options-btn {
-      text-align: right;
-      padding-right: 8px;
-      cursor: pointer;
-    }
-  }
-
-  .item {
-    margin: 5px;
-    height: auto;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    background-color: rgb(255, 255, 255);
-    // background-color: rgba(121, 133, 95, 0.1);
-    /* offset-x | offset-y | blur-radius | spread-radius | color */
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  }
-
-  .item__container {
-    white-space: pre-line;
-    padding: 5px;
-    border: 1px solid rgb(150, 150, 150);
-    border-radius: 4px;
-  }
-
-  .item-title-container {
     display: flex;
     justify-content: space-between;
+    align-content: center;
+    padding: 30px 5%;
+    padding-top: 50px;
 
-    i {
-      color: rgb(150, 150, 150);
+    h1 {
+      // padding: 30px 5%;
+      font-family: "Merriweather", serif;
+      color: rgb(48, 48, 48);
+    }
+
+    .btn-container {
       text-align: right;
-      padding-left: 8px;
-      cursor: pointer;
+      display: inline-flex;
+      .button {
+        background-color: rgb(130, 156, 167);
+      }
     }
   }
 
-  .item__title {
-    // font-size: 18px;
-    width: 100%;
-    font-weight: bold;
-    text-transform: capitalize;
+  .board-container {
+    // max-width: 1400px;
+    overflow: hidden;
+    margin-bottom: 40px;
+    margin: 0 5px;
+    padding-left: 20px;
 
-    flex-grow: 1;
-    padding-bottom: 4px;
-  }
+    .scrollbar {
+      overflow: auto;
+      white-space: nowrap;
+    }
 
-  .current {
-    background-color: #fff;
-    color: #fff;
-    box-shadow: none;
+    /* width */
+    ::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+      background: rgba(130, 156, 167, 0.2);
+      background-color: none;
+      border: 1px solid rgb(150, 150, 150);
+      border-radius: 4px;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+      background: rgba(130, 156, 167, 0.7);
+      // background: rgba(255, 255, 255, 0.7);
+      border: 1px solid rgb(150, 150, 150);
+      border-radius: 4px;
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+      background: rgb(130, 156, 167);
+      // background: rgb(255, 255, 255);
+    }
+
+    .drag-n-drop {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      align-items: flex-start;
+    }
+
+    .column {
+      min-width: 270px;
+      border: 1px solid rgb(150, 150, 150);
+      border-radius: 8px;
+      margin: 0 5px;
+      margin-bottom: 30px;
+      // background-color: #fff;
+      background-color: rgb(235, 236, 240);
+      min-height: 100px;
+      box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    }
+
+    .column-title {
+      // background-color: rgb(130, 156, 167);
+      // background-color: rgb(150, 150, 150);
+      background-color: #ebecf0;
+      text-align: center;
+      // color: whitesmoke;
+      color: black;
+      font-size: 18px;
+      font-weight: bolder;
+      text-transform: capitalize;
+      padding: 4px;
+      margin: 8px 0;
+
+      display: flex;
+      justify-content: flex-end;
+
+      .title {
+        text-align: center;
+        flex-grow: 1;
+        padding-bottom: 4px;
+        padding-left: 28px;
+      }
+      .options-btn {
+        text-align: right;
+        padding-right: 8px;
+        cursor: pointer;
+        color: black;
+      }
+    }
+
+    .item {
+      margin: 8px;
+      height: auto;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      background-color: rgb(255, 255, 255);
+      box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    }
 
     .item__container {
-      border: none;
+      white-space: pre-line;
+      padding: 8px;
+      border: 1px solid rgb(150, 150, 150);
+      border-radius: 4px;
     }
-  }
 
-  .add-btn-container {
-    width: 80%;
-    margin: 5px auto;
-    margin-top: 10px;
-    // background-color: rgb(130, 156, 167);
-    background-color: rgb(126, 140, 146);
-    text-align: center;
-    border-radius: 8px;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-
-    color: white;
-    .add-btn {
+    .item-title-container {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      margin: 0 auto;
-      cursor: pointer;
-      padding: 5px 0;
+      justify-content: space-between;
 
-      p,
-      svg {
-        margin: 0 4px;
-        font-weight: bold;
-      }
-      svg {
-        color: rgb(0, 0, 0);
-        color: white;
+      i {
+        color: rgb(150, 150, 150);
+        text-align: right;
+        padding-left: 8px;
+        cursor: pointer;
       }
     }
-  }
 
-  .delete-btn {
-    background-color: red;
+    .item__title {
+      width: 100%;
+      font-weight: bold;
+      text-transform: capitalize;
+
+      flex-grow: 1;
+      padding-bottom: 4px;
+    }
+
+    .item__desc {
+      font-size: 14px;
+    }
+
+    .current {
+      // background-color: #fff;
+      background-color: rgb(235, 236, 240);
+      // color: #fff;
+      color: rgb(235, 236, 240);
+      box-shadow: none;
+
+      .item__container {
+        border: none;
+
+        i {
+          color: rgb(235, 236, 240);
+        }
+      }
+    }
+
+    .add-btn-container {
+      width: 80%;
+      margin: 10px auto;
+      margin-top: 10px;
+      background-color: rgb(126, 140, 146);
+      text-align: center;
+      border-radius: 8px;
+      box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+
+      color: white;
+      .add-btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        margin: 0 auto;
+        cursor: pointer;
+        padding: 5px 0;
+
+        p,
+        svg {
+          margin: 0 4px;
+          font-weight: bold;
+        }
+        svg {
+          color: rgb(0, 0, 0);
+          color: white;
+        }
+      }
+    }
+
+    .delete-btn {
+      background-color: red;
+    }
+  }
+}
+
+@media only screen and (min-height: 850px) {
+  .EventBoard {
+    .board-container {
+      height: 600px;
+    }
+  }
+}
+
+@media only screen and (min-height: 650px) and (max-height: 849px) {
+  .EventBoard {
+    .board-container {
+      height: 400px;
+    }
   }
 }
