--- a/src/components/Login-Signup/Forms.scss
+++ b/src/components/Login-Signup/Forms.scss
@@ -1,4 +1,18 @@
 .signup-container,
+.login-container {
+  padding: 30px 0;
+  height: 100%;
+  position: relative;
+  padding-top: 50px;
+
+  // min-height: 100vh;
+
+  button {
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+}
+
+.signup-container,
 .login-container,
 .add-item-container,
 .new-event-container,
@@ -7,7 +21,7 @@
   flex-wrap: wrap;
   width: 80%;
   justify-content: center;
-  // border: 1px solid rgb(130, 156, 167);
+  margin-left: 10%;
 
   h2 {
     color: black;
@@ -19,6 +33,8 @@
 
     padding-top: 0;
     padding-bottom: 10px;
+
+    font-family: "Merriweather", serif;
   }
 
   form {
@@ -49,7 +65,6 @@
     width: 100%;
     border-radius: 4px;
     outline: none;
-    border: 1px solid rgb(121, 133, 95);
     border: 1px solid rgb(130, 156, 167);
     box-shadow: 2px 2px 2px 1px rgba(130, 156, 167, 0.2);
     padding: 6px;
@@ -68,6 +83,7 @@
   button {
     background-color: rgb(130, 156, 167);
     color: rgb(255, 255, 255);
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   }
   button.add-task-btn {
     background-color: rgb(130, 156, 167);
@@ -95,13 +111,17 @@
     color: #cc0033;
     font-size: 16px;
     margin: 0;
+    font-weight: bold;
+    font-style: italic;
   }
 
-  // .saved {
-  //   font-size: 16px;
-  //   margin: 0;
-  //   justify-self: center;
-  // }
+  .saved {
+    font-size: 16px;
+    margin: 0;
+    color: green;
+    font-weight: bold;
+    font-style: italic;
+  }
 }
 
 .modify-column-container {
@@ -114,13 +134,6 @@
   }
   p {
     height: 16px;
-  }
-  .saved {
-    font-size: 16px;
-    margin: 0;
-    color: green;
-    font-weight: bold;
-    font-style: italic;
   }
 
   .btn-container {
