--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,6 +7,7 @@ footer {
   text-align: center;
   background: rgb(130, 156, 167);
   color: rgb(255, 255, 255);
+  text-transform: capitalize;
 
   .header-logo {
     font-size: 48px;
