--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,7 @@ main {
 
 .layout {
   background-color: rgba(235, 235, 235, 0.3);
+  // background: rgba(49, 49, 49, 0.3);
 }
 
 .visually-hidden {
