--- a/src/components/Event-Board/EventBoard.scss
+++ b/src/components/Event-Board/EventBoard.scss
@@ -29,7 +29,6 @@
     padding-top: 50px;
 
     h1 {
-      // padding: 30px 5%;
       font-family: "Merriweather", serif;
       color: rgb(48, 48, 48);
     }
@@ -44,7 +43,6 @@
   }
 
   .board-container {
-    // max-width: 1400px;
     overflow: hidden;
     margin-bottom: 40px;
     margin: 0 5px;
@@ -71,7 +69,6 @@
     /* Handle */
     ::-webkit-scrollbar-thumb {
       background: rgba(130, 156, 167, 0.7);
-      // background: rgba(255, 255, 255, 0.7);
       border: 1px solid rgb(150, 150, 150);
       border-radius: 4px;
     }
@@ -79,13 +76,12 @@
     /* Handle on hover */
     ::-webkit-scrollbar-thumb:hover {
       background: rgb(130, 156, 167);
-      // background: rgb(255, 255, 255);
     }
 
     .drag-n-drop {
       display: flex;
       width: 100%;
-      height: 100%;
+      min-height: 400px;
       align-items: flex-start;
     }
 
@@ -95,18 +91,14 @@
       border-radius: 8px;
       margin: 0 5px;
       margin-bottom: 30px;
-      // background-color: #fff;
       background-color: rgb(235, 236, 240);
       min-height: 100px;
       box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     }
 
     .column-title {
-      // background-color: rgb(130, 156, 167);
-      // background-color: rgb(150, 150, 150);
       background-color: #ebecf0;
       text-align: center;
-      // color: whitesmoke;
       color: black;
       font-size: 18px;
       font-weight: bolder;
@@ -228,7 +220,10 @@
 @media only screen and (min-height: 850px) {
   .EventBoard {
     .board-container {
-      height: 600px;
+      min-height: 700px;
+      .drag-n-drop {
+        min-height: 600px;
+      }
     }
   }
 }
@@ -236,7 +231,7 @@
 @media only screen and (min-height: 650px) and (max-height: 849px) {
   .EventBoard {
     .board-container {
-      height: 400px;
+      min-height: 500px;
     }
   }
 }
