--- a/src/components/Login-Signup/Forms.scss
+++ b/src/components/Login-Signup/Forms.scss
@@ -243,31 +243,37 @@
   }
 }
 
-// .datepicker-container {
-//   .date-label {
-//     div {
-//       margin: 10px 0;
-//     }
-//   }
-
-//   button {
-//     width: 32px;
-//   }
-
-//   .react-datepicker__navigation-icon .react-datepicker__navigation-icon--previous {
-//     padding: 0;
-//     font-size: 100%;
-//   }
-
-//   .react-datepicker__navigation-icon {
-//     font-size: 20px;
-//     padding: 0;
-//   }
-// }
-
 .new-event-container {
   .datepicker-container {
     margin: 10px 0;
+
+    .display-event-date {
+      // background: bisque;
+      width: 100%;
+
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      div.current-date-container,
+      div.new-date-container {
+        display: flex;
+        align-items: center;
+        width: 50%;
+
+        p {
+          margin-right: 10px;
+        }
+
+        label {
+          width: 120px;
+        }
+
+        input {
+          width: 200px;
+        }
+      }
+    }
 
     div {
       width: auto;
@@ -444,30 +450,10 @@
         }
       }
 
-      &--years {
-        position: relative;
-        top: 0;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
       &:hover {
         *::before {
           border-color: darken($datepicker__muted-color, 15%);
         }
-      }
-    }
-    .react-datepicker__header {
-      background-color: #829ca7;
-      color: white;
-
-      .react-datepicker__current-month {
-        color: white;
-      }
-
-      .react-datepicker__day-names {
-        color: white;
       }
     }
 
@@ -475,27 +461,11 @@
       margin: $datepicker__margin;
       text-align: center;
       color: white;
-
-      .react-datepicker__month-text,
-      .react-datepicker__quarter-text {
-        display: inline-block;
-        width: 4rem;
-        margin: 2px;
-      }
     }
 
     .react-datepicker__time-container {
       border-left: 1px solid $datepicker__border-color;
       width: 85px;
-
-      &--with-today-button {
-        display: inline;
-        border: 1px solid #aeaeae;
-        border-radius: 0.3rem;
-        position: absolute;
-        right: -72px;
-        top: 0;
-      }
 
       .react-datepicker__time {
         .react-datepicker__time-box {
@@ -639,70 +609,6 @@
       }
     }
 
-    .react-datepicker__month-text,
-    .react-datepicker__quarter-text {
-      &.react-datepicker__month--selected,
-      &.react-datepicker__month--in-range,
-      &.react-datepicker__quarter--selected,
-      &.react-datepicker__quarter--in-range {
-        &:hover {
-          background-color: $datepicker__selected-color;
-        }
-      }
-
-      &:hover {
-        background-color: $datepicker__background-color;
-      }
-    }
-
-    .react-datepicker__year-read-view,
-    .react-datepicker__month-read-view,
-    .react-datepicker__month-year-read-view {
-      border: 1px solid transparent;
-      border-radius: $datepicker__border-radius;
-      position: relative;
-
-      &:hover {
-        cursor: pointer;
-
-        .react-datepicker__year-read-view--down-arrow,
-        .react-datepicker__month-read-view--down-arrow {
-          border-top-color: darken($datepicker__muted-color, 10%);
-        }
-      }
-
-      &--down-arrow {
-        @extend %navigation-chevron;
-
-        transform: rotate(135deg);
-        right: -16px;
-        top: 0;
-      }
-    }
-
-    .react-datepicker__year-dropdown,
-    .react-datepicker__month-dropdown,
-    .react-datepicker__month-year-dropdown {
-      background-color: $datepicker__background-color;
-      // position: absolute;
-      // width: 50%;
-      // left: 25%;
-      // top: 30px;
-      // z-index: 1;
-      // text-align: center;
-      border-radius: $datepicker__border-radius;
-      border: 1px solid $datepicker__border-color;
-
-      &:hover {
-        cursor: pointer;
-      }
-
-      &--scrollable {
-        height: 150px;
-        overflow-y: scroll;
-      }
-    }
-
     .react-datepicker__year-option,
     .react-datepicker__month-option,
     .react-datepicker__month-year-option {
@@ -719,52 +625,18 @@
         border-bottom-left-radius: $datepicker__border-radius;
         border-bottom-right-radius: $datepicker__border-radius;
       }
-
-      &:hover {
-        background-color: $datepicker__muted-color;
-
-        .react-datepicker__navigation--years-upcoming {
-          border-bottom-color: darken($datepicker__muted-color, 10%);
-        }
-
-        .react-datepicker__navigation--years-previous {
-          border-top-color: darken($datepicker__muted-color, 10%);
-        }
-      }
-
-      &--selected {
-        position: absolute;
-        left: 15px;
-      }
     }
 
-    .react-datepicker__close-icon {
-      &::after {
-        cursor: pointer;
-        background-color: $datepicker__selected-color;
-        color: #fff;
-      }
+    .react-datepicker__day-name {
+      color: white;
     }
 
-    .react-datepicker__today-button {
-      background: $datepicker__background-color;
-      border-top: 1px solid $datepicker__border-color;
-    }
+    .react-datepicker__header {
+      background-color: #829ca7;
+      color: white;
 
-    .react-datepicker__portal {
-      // Resize for small screens
-      @media (max-width: 400px), (max-height: 550px) {
-        .react-datepicker__day-name,
-        .react-datepicker__day,
-        .react-datepicker__time-name {
-          width: 2rem;
-          line-height: 2rem;
-        }
-      }
-
-      .react-datepicker__current-month,
-      .react-datepicker-time__header {
-        font-size: $datepicker__font-size * 1.8;
+      .react-datepicker__current-month {
+        color: white;
       }
     }
   }
