--- a/src/components/Forms.scss
+++ b/src/components/Forms.scss
@@ -241,6 +241,21 @@
       margin-right: 10px;
     }
   }
+
+  .budget {
+    div {
+      flex-grow: 1;
+      margin: 0;
+      display: flex;
+      align-items: center;
+      width: 350px;
+      justify-content: space-between;
+    }
+    input {
+      flex-grow: 1;
+      margin-right: 10px;
+    }
+  }
 }
 
 .new-event-container {
