--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -55,31 +55,22 @@ li.DashbordItem {
   &:nth-child(2n + 1) {
     margin-right: 15px;
   }
-  .btn-container-parent {
+
+  .btn-container {
     display: flex;
+    height: auto;
+    justify-content: center;
+    margin: 10px 5px;
+    text-align: center;
+    width: 100%;
 
-    .btn-container {
-      display: flex;
-      flex-direction: row;
-      height: auto;
-      justify-content: center;
-      margin: 10px 5px;
-      text-align: center;
-      width: 100%;
-
-      a {
-        background-color: rgb(130, 156, 167);
-        color: #fff;
-        display: inline-block;
-        width: auto;
-        box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-      }
-    }
-    .left {
-      justify-content: flex-end;
-    }
-    .right {
-      justify-content: flex-start;
+    a {
+      background-color: rgb(130, 156, 167);
+      color: #fff;
+      display: inline-block;
+      width: auto;
+      box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+      margin: 0 10px;
     }
   }
 }
@@ -101,7 +92,7 @@ li.DashbordItem {
     padding-left: 24px;
   }
   i {
-    color: black;
+    color: grey;
     text-align: right;
     padding-left: 8px;
     cursor: pointer;
