--- a/src/index.scss
+++ b/src/index.scss
@@ -42,6 +42,7 @@ a.button {
   font-weight: bolder;
   border: none;
   text-decoration: none;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 a {
@@ -102,10 +103,8 @@ h6 {
     border-radius: 8px;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 
-    button {
-      width: 100%;
-    }
     .close-btn {
+      width: 100%;
       text-align: right;
       padding-right: 20px;
     }
