--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -66,8 +66,8 @@
         height: 100%;
         border-radius: 4px;
         margin: 0 auto;
-        box-shadow: 2px 2px 2px 1px rgba(130, 156, 167, 0.2);
         box-shadow: 8px 4px 8px 1px rgba(130, 156, 167, 0.5);
+        border: 1px solid rgba(130, 156, 167, 0.5);
       }
     }
   }
